# income-calculator

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.slint
