[package]
name = "income-calculator"
version = "0.1.0"
authors = ["luisotaviodesimone <luisotaviodesimone@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Small app to calculate income"

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Income calculator"
identifier = "io.github.luisotaviodesimone.income-calculator"
description = "Small app to calculate income"
icon = ["icon*.png"]